--- a/roveretosegnala/platforms/android/assets/www/templates/menu.html
+++ b/roveretosegnala/platforms/android/assets/www/templates/menu.html
@@ -21,7 +21,7 @@
                 <ion-item nav-clear menu-close href="#/app/map">
                     Map
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/segnala">
+                <ion-item nav-clear menu-close href="#/app/segnala/">
                     Segnala
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/archivio">
