--- a/roveretosegnala/www/templates/segnala.html
+++ b/roveretosegnala/www/templates/segnala.html
@@ -1,18 +1,21 @@
 <ion-view view-title="{{'segnala_title' | translate}}" data-ng-init="setAutocomplete(params.place)">
+    <ion-nav-buttons side="right">
+        <button class="button button-icon button-clear ion-checkmark-round" ng-click="submit()"></button>
+    </ion-nav-buttons>
     <ion-content>
-        <form novalidate class="simple-form">
+        <form novalidate class="simple-form" name="signal_form">
             <div class="list list-inset">
 
                 <div class="item item-input-inset">
                     <label class="item-input-wrapper">
-                        <input type="text" placeholder="{{'segnala_input_title' | translate}}">
+                        <input ng-model="signal.title" name="signal_title" type="text" placeholder="{{'segnala_input_title' | translate}}">
                     </label>
 
                 </div>
 
                 <div class="item item-input-inset">
                     <label class="item-input-wrapper">
-                        <input type="text" placeholder="{{'segnala_input_description' | translate}}">
+                        <input ng-model="signal.description" type="text" placeholder="{{'segnala_input_description' | translate}}">
                     </label>
 
                 </div>
@@ -20,13 +23,13 @@
 
                 <div class="item item-input">
                     <!--                    <label class="item-input-wrapper">-->
-                    <placeautocomplete ng-model="result" attr-placeholder="type to search movies..." click-activation="true" data="places" on-type="doSomething" placeholder="{{'segnala_input_description' | translate}}" style="width: 100%" on-select="changeString"></placeautocomplete>
+                    <placeautocomplete ng-model="result" attr-placeholder="{{'segnala_input_place_suggestion' | translate}}" click-activation="true" data="places" on-type="doSomething" placeholder="{{'segnala_input_description' | translate}}" style="width: 100%" on-select="changeString"></placeautocomplete>
 
                     <!--</label>-->
-                    <button class="button button-positive" ng-click="locateMe()">
-                        <i class="icon ion-android-locate"></i>
+                    <button class="button button-custom" ng-click="locateMe()">
+                        <i class="icon ion-android-locate "></i>
                     </button>
-                    <button class="button button-positive" ng-click="openMap4Address()">
+                    <button class="button button-custom" ng-click="openMap4Address()">
                         <i class="icon ion-map"></i>
                     </button>
                 </div>
@@ -55,20 +58,27 @@
                 <input type="hidden" name="long" value="{{chosenPlace.geometry.location.lng()}}">
                 <div align="center">
 
-                    <button class="button button-positive button-large" ng-click="addImage('Camera')">
+                    <button class="button button-custom button-large" ng-click="addImage('Camera')">
                         <i class=" icon ion-android-camera"></i>
                     </button>
-                    <button class="button button-positive button-large" ng-click="addImage('Gallery')">
+                    <button class="button button-custom button-large" ng-click="addImage('Gallery')">
                         <i class=" icon ion-images"></i>
                     </button>
                 </div>
                 <ion-scroll>
-                    <img ng-repeat="image in images" ng-src="{{urlForImage(image)}}" height="200px" />
+                    <!--
+<img id="immagine" ng-src="http://vignette4.wikia.nocookie.net/robber-penguin-agency/images/6/6e/Small-mario.png" height="200px" />
+<canvas id="myCanvas" />
+-->
+
+                    <img ng-repeat="image in images" ng-src="{{urlForImage(image)}}" ng-click="removeImage(image)" height="200px" />
                 </ion-scroll>
 
-                <button class="button button-block button-positive" ng-click="submit()">
-                    {{'segnala_button_send' | translate}}
-                </button>
+                <!--
+<button class="button button-block button-positive" ng-click="submit()">
+    {{'segnala_button_send' | translate}}
+</button>
+-->
             </div>
         </form>
     </ion-content>
