--- a/roveretosegnala/www/templates/segnala.html
+++ b/roveretosegnala/www/templates/segnala.html
@@ -8,14 +8,14 @@
 
                 <div class="item item-input-inset">
                     <label class="item-input-wrapper">
-                        <input ng-model="signal.title" name="signal_title" type="text" placeholder="{{'segnala_input_title' | translate}}">
+                        <input ng-model="signal.attribute.title" name="signal_title" type="text" placeholder="{{'segnala_input_title' | translate}}">
                     </label>
 
                 </div>
 
                 <div class="item item-input-inset">
                     <label class="item-input-wrapper">
-                        <input ng-model="signal.description" type="text" placeholder="{{'segnala_input_description' | translate}}">
+                        <input ng-model="signal.attribute.description" type="text" placeholder="{{'segnala_input_description' | translate}}">
                     </label>
 
                 </div>
@@ -36,16 +36,24 @@
 
 
 
-                <label class="item item-input item-select">
-                    <div class="input-label">
-                        {{'segnala_label_categories' | translate}}
-                    </div>
-                    <select>
-                        <option>{{'segnala_category_1' | translate}}</option>
-                        <option selected>{{'segnala_category_2' | translate}}</option>
-                        <option>{{'segnala_category_3' | translate}}</option>
+                <!--                <label class="item item-input item-select">-->
+                <!--
+<div class="input-label">
+    {{'segnala_label_categories' | translate}}
+</div>
+-->
+                <!--
+<select>
+    <option selected>{{'segnala_category_1' | translate}}</option>
+    <option>{{'segnala_category_2' | translate}}</option>
+    <option>{{'segnala_category_3' | translate}}</option>
+</select>
+-->
+                <div>
+                    <select ng-model="selectedCategory" ng-options="cat as cat.label for cat in categories">
                     </select>
-                </label>
+                </div>
+                <!--                </label>-->
                 <!--
 <div>
 <autocomplete ng-model="result" attr-placeholder="type to search movies..." click-activation="true" data="places" on-type="doSomething" on-select="doSomethingElse" placeholder="{{'segnala_input_description' | translate}}"></autocomplete>
