--- a/roveretosegnala/www/templates/archiviodetail.html
+++ b/roveretosegnala/www/templates/archiviodetail.html
@@ -1,84 +1,29 @@
 <ion-view title="{{'archivedetail_title' | translate}}">
-    <ion-nav-page title="title">
-        <ion-content has-header="true" has-footer="true" padding="true">
-            <div class="list">
+    <ion-content has-header="true" has-footer="true" padding="true">
 
-                <a class="item item-icon-left" href="#">
-                    <i class="icon ion-email"></i> <b>{{'archivedetail_title' | translate}}:</b> {{signal.attribute.title}}
+        <div class="signal-detail-element"><b> {{signal.attribute.title}}</b>
+        </div>
 
-                </a>
-                <a class="item item-icon-left" href="#">
-                    <i class="icon ion-document-text"></i> <b>{{'archivedetail_description' | translate}}:</b> {{signal.attribute.description}}
-                </a>
-                <a class="item item-icon-left" href="#">
-                    <i class="icon ion-ios-location"></i> <b>{{'archivedetail_address' | translate}}:</b> {{signal.location.address}}
+        <div class="signal-detail-element">
+            {{signal.attribute.description}}
+        </div>
 
-                </a>
-                <a class="item item-icon-left" href="#">
-                    <i class="icon ion-ios-list"></i><b> {{'archivedetail_category' | translate}}:</b> {{signal.attribute.category}}
+        <div class="signal-detail-element">
+            <i class="icon ion-ios-location" style="font-size:25px; margin-right:8px"></i> {{signal.location.address}}
+        </div>
 
-                </a>
+        <div class="signal-detail-element">
+            <i class="icon ion-pricetag" style="font-size:25px; margin-right:8px"></i>{{signal.attribute.category.label}}
+        </div>
 
+        <div class="item item-divider">
+            <i class="ion-images"></i> {{'archivedetail_images' | translate}}
+        </div>
+        <a class="item item-list-detail">
+            <ion-scroll direction="x">
+                <img ng-repeat="picture in signal.media" ng-src="{{picture}}" ng-click="showImages($index)" class="image-list-thumb" />
+            </ion-scroll>
+        </a>
 
-
-
-                <ion-slide-box active-slide="myActiveSlide" show-pager="true">
-                    <ion-slide ng-repeat="picture in signal.media ">
-                        <img src="{{picture}}" />
-                    </ion-slide>
-                </ion-slide-box>
-
-
-            </div>
-            <!--
-           <a class="item item-icon-left" href="#">
-    <i class="icon ion-images"></i>
-    <ion-slide-box active-slide="myActiveSlide" show-pager="true">
-        <ion-slide ng-repeat="picture in signal.pictures ">
-            <img src="{{picture.imagefull}}" />
-        </ion-slide>
-    </ion-slide-box>
-</a>
--->
-        </ion-content>
-    </ion-nav-page>
+    </ion-content>
 </ion-view>
-
-
-<!--
-<ion-view title="{{'archivedetail_title' | translate}}">
-    <ion-nav-page title="title">
-        <ion-content has-header="true" has-footer="true" padding="true">
-            <h1>{{'archivedetail_headtitle' | translate}}</h1>
-            <dl>
-                <dt>{{'archivedetail_title' | translate}}:</dt>
-                <dd>{{signal.title}}</dd>
-            </dl>
-            <dl>
-                <dt>{{'archivedetail_description' | translate}}:</dt>
-                <dd>{{signal.description}}</dd>
-            </dl>
-            <dl>
-                <dt>{{'archivedetail_address' | translate}}:</dt>
-                <dd>{{signal.address}}</dd>
-            </dl>
-            <dl>
-                <dt>{{'archivedetail_category' | translate}}:</dt>
-                <dd>{{signal.category}}</dd>
-            </dl>
-            <dl>
-                
-                <ion-item ng-repeat="picture in signal.pictures ">
-                    <img src="{{picture.imagefull}}" />
-                </ion-item>
-                
-                <ion-slide-box active-slide="myActiveSlide" show-pager="true">
-                    <ion-slide ng-repeat="picture in signal.pictures ">
-                        <img src="{{picture.imagefull}}" />
-                    </ion-slide>
-                </ion-slide-box>
-            </dl>
-
-        </ion-content>
-    </ion-nav-page>
-</ion-view>-->
