--- a/roveretosegnala/platforms/android/assets/www/templates/map.html
+++ b/roveretosegnala/platforms/android/assets/www/templates/map.html
@@ -1,8 +1,7 @@
-
 <ion-view title="{{'map_title' | translate}}">
-    <ion-content class="padding">
+    <ion-content>
         <div data-tap-disabled="true">
-            <leaflet event-broadcast="events" defaults="defaults" center="center" markers="markers" style="width: 100%; height: 640px;"></leaflet>
+            <leaflet event-broadcast="events" center="center" markers="myMarkers" style="width: 100%; height: 640px;"></leaflet>
         </div>
     </ion-content>
 </ion-view>
