--- a/roveretosegnala/www/css/style.css
+++ b/roveretosegnala/www/css/style.css
@@ -1,30 +1,4 @@
 /* Empty. Add your own CSS if you like */
-/*
-.scroll {
-    height: 100%;
-}
-
-.angular-google-map-container {
-    display: block;
-    height: 400px;
-    width: 400px;
-}
-
-.close-modal {
-    position: absolute;
-    right: 0px;
-    top: 5px;
-    font-size: 1.8em;
-    text-align: center;
-    z-index: 10;
-    background-color: #f5f5f5;
-    border-radius: 30px;
-    width: 26px;
-    cursor: pointer;
-    line-height: 0px;
-    border: 1px solid #ddd;
-}
-*/
 
 body {
     padding: 0;
@@ -100,9 +74,101 @@ body {
 .button.button-custom {
     border-color: #c62828;
     background-color: #c62828;
+    margin: 1px;
+    color: #e6e6e6;
+}
+
+.button.button-custom:hover {
+    border-color: #c62828;
+    background-color: #b22424;
     color: #e6e6e6;
 }
 
 .custom-icon-menu {
     color: #90a4ae;
+}
+
+.menu-entry {
+    text-align: left;
+}
+
+.menu-entry img {
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+}
+
+.menu-entry span {
+    vertical-align: middle;
+}
+/*
+.bar.bar-stable {
+    background-color: #c62828;
+    color: #c62828;
+}
+
+.bar.bar-stable .title {
+    background-color: #c62828;
+    color: #c62828;
+}*/
+
+.bar.custom-bar {
+    border-color: #c62828;
+    background-color: #c62828;
+    background-image: none;
+}
+
+.bar .title {
+    color: #fff;
+}
+
+.signal-detail-element {
+    margin: 10px;
+}
+
+.signal-detail-element icon {
+    margin: 10px;
+}
+
+.image-list-thumb {
+    padding: 2px 2px 2px 2px;
+    height: 100px;
+}
+
+.image-modal {
+    width: 100% !important;
+    height: 100%;
+    top: 0 !important;
+    left: 0 !important;
+}
+
+.transparent {
+    background: transparent !important;
+}
+
+.fullscreen-image {
+    max-width: 100%;
+    max-height: 100%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    overflow: auto;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
+.slider {
+    width: 100%;
+    height: 100%;
+}
+
+.tabs-positive > .tabs {
+    background-color: #c62828 !important;
+}
+
+.tab-item.tab-item-active,
+.tab-item.active,
+.tab-item.activated {
+    background-color: #b22424 !important;
 }
