--- a/roveretosegnala/www/templates/menu.html
+++ b/roveretosegnala/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable">
+        <ion-nav-bar class="bar custom-bar">
             <ion-nav-back-button>
             </ion-nav-back-button>
 
@@ -13,29 +13,51 @@
     </ion-side-menu-content>
 
     <ion-side-menu side="left">
-        <ion-header-bar class="bar-stable">
-            <h1 class="title">Left</h1>
+        <ion-header-bar class="bar custom-bar">
+            <h1 class="title" style="color=pink">Menu</h1>
         </ion-header-bar>
         <ion-content>
             <ion-list>
                 <ion-item nav-clear menu-close href="#/app/map">
-                    <img src="img/ic-mappa.png">
-                    </i> {{'menu_map' | translate}}
+                    <div class="menu-entry">
+                        <img src="img/ic-mappa.png">
+                        <span>{{'menu_map' | translate}}</span>
+                    </div>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/segnala/">
-                    <img src="img/ic-segnala.png"> {{'menu_segnala' | translate}}
+                <ion-item nav-clear menu-close ng-click="openSignal()">
+                    <div class="menu-entry">
+
+                        <img src="img/ic-segnala.png">
+                        <span>{{'menu_segnala' | translate}}
+                         </span>
+                    </div>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/archivio">
-                    <i class="icon ion-android-folder custom-icon-menu"></i> {{'menu_archivio' | translate}}
+                    <div class="menu-entry">
+
+                        <img src="img/ic-archivio.png">
+                        <span>{{'menu_archivio' | translate}}</span>
+                    </div>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/mysignals">
-                    <i class="icon ion-mic-a custom-icon-menu"></i> {{'menu_lemiesegnalazioni' | translate}}
+                    <div class="menu-entry">
+                        <img src="img/ic-mysignals.png">
+                        <span>{{'menu_lemiesegnalazioni' | translate}}</span>
+                    </div>
                 </ion-item>
                 <ion-item nav-clear menu-close ng-click="openModal(1)">
-                    <i class="icon ion-android-contact custom-icon-menu "></i> {{'menu_login' | translate}}
+                    <div class="menu-entry">
+
+                        <img src="img/ic-login.png">
+                        <span>{{'menu_login' | translate}}</span>
+                    </div>
                 </ion-item>
                 <ion-item nav-clear menu-close ng-click="openModal(2)">
-                    <i class="icon ion-information-circled custom-icon-menu"></i> {{'menu_credits' | translate}}
+                    <div class="menu-entry">
+
+                        <img src="img/ic-credits.png">
+                        <span>{{'menu_credits' | translate}}</span>
+                    </div>
                 </ion-item>
             </ion-list>
         </ion-content>
